--- a/Inpenso.xcodeproj/xcshareddata/xcschemes/Inpenso.xcscheme
+++ b/Inpenso.xcodeproj/xcshareddata/xcschemes/Inpenso.xcscheme
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1630"
-   wasCreatedForAppExtension = "YES"
-   version = "2.0">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
@@ -16,24 +15,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "714E83162DBE3597005ED7BB"
-               BuildableName = "iExpenseWidgetExtensionExtension.appex"
-               BlueprintName = "iExpenseWidgetExtensionExtension"
-               ReferencedContainer = "container:iExpense.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "714E82F22DBE3124005ED7BB"
-               BuildableName = "iExpense.app"
-               BlueprintName = "iExpense"
-               ReferencedContainer = "container:iExpense.xcodeproj">
+               BuildableName = "Inpenso.app"
+               BlueprintName = "Inpenso"
+               ReferencedContainer = "container:Inpenso.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,60 +32,39 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      launchAutomaticallySubstyle = "2">
+      allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "714E82F22DBE3124005ED7BB"
-            BuildableName = "iExpense.app"
-            BlueprintName = "iExpense"
-            ReferencedContainer = "container:iExpense.xcodeproj">
+            BuildableName = "Inpenso.app"
+            BlueprintName = "Inpenso"
+            ReferencedContainer = "container:Inpenso.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "_XCWidgetKind"
-            value = ""
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "_XCWidgetDefaultView"
-            value = "timeline"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "_XCWidgetFamily"
-            value = "systemMedium"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES"
-      askForAppToLaunch = "Yes"
-      launchAutomaticallySubstyle = "2">
+      debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "714E82F22DBE3124005ED7BB"
-            BuildableName = "iExpense.app"
-            BlueprintName = "iExpense"
-            ReferencedContainer = "container:iExpense.xcodeproj">
+            BuildableName = "Inpenso.app"
+            BlueprintName = "Inpenso"
+            ReferencedContainer = "container:Inpenso.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
