--- a/Inpenso.xcodeproj/xcshareddata/xcschemes/InpensoWidgetExtensionExtension.xcscheme
+++ b/Inpenso.xcodeproj/xcshareddata/xcschemes/InpensoWidgetExtensionExtension.xcscheme
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1630"
-   version = "1.7">
+   wasCreatedForAppExtension = "YES"
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
@@ -15,10 +16,24 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "714E83162DBE3597005ED7BB"
+               BuildableName = "InpensoWidgetExtensionExtension.appex"
+               BlueprintName = "InpensoWidgetExtensionExtension"
+               ReferencedContainer = "container:Inpenso.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "714E82F22DBE3124005ED7BB"
-               BuildableName = "iExpense.app"
-               BlueprintName = "iExpense"
-               ReferencedContainer = "container:iExpense.xcodeproj">
+               BuildableName = "Inpenso.app"
+               BlueprintName = "Inpenso"
+               ReferencedContainer = "container:Inpenso.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,39 +47,60 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
+      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "714E82F22DBE3124005ED7BB"
-            BuildableName = "iExpense.app"
-            BlueprintName = "iExpense"
-            ReferencedContainer = "container:iExpense.xcodeproj">
+            BuildableName = "Inpenso.app"
+            BlueprintName = "Inpenso"
+            ReferencedContainer = "container:Inpenso.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "_XCWidgetKind"
+            value = ""
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetDefaultView"
+            value = "timeline"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetFamily"
+            value = "systemMedium"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      askForAppToLaunch = "Yes"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "714E82F22DBE3124005ED7BB"
-            BuildableName = "iExpense.app"
-            BlueprintName = "iExpense"
-            ReferencedContainer = "container:iExpense.xcodeproj">
+            BuildableName = "Inpenso.app"
+            BlueprintName = "Inpenso"
+            ReferencedContainer = "container:Inpenso.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
