--- a/iExpenseWidgetExtensionExtension.entitlements
+++ b/iExpenseWidgetExtensionExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.vintuss.iexpense</string>
+		<string>group.com.vintuss.Inpenso</string>
 	</array>
 </dict>
 </plist>
